[project]
name = "ros_tf_example"
authors = [{ name = "Daniel Duberg", email = "daniel@rerun.io" }]
requires-python = ">= 3.11"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "rerun-sdk[datafusion]>=0.28.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "linux-64", 
    "linux-aarch64",
    "osx-arm64", 
    "win-64",
]

[tool.pixi.pypi-dependencies]
ros_tf_example = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff]
line-length = 150
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    "E501", # Line too long.
    "F722", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821", # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
